pyroscope/python-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-fast-slow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-fast-slow
  template:
    metadata:
      labels:
        app: python-fast-slow
    spec:
      containers:
        - name: python-fast-slow
          image: python:3.11
          imagePullPolicy: IfNotPresent
          command: [ "python3" ]
          args: [ "/app/main.py" ]
          volumeMounts:
            - name: app
              mountPath: /app
          resources:
            limits:
              cpu: 400m
              memory: 400Mi
            requests:
              cpu: 400m
              memory: 200Mi
      volumes:
        - name: app
          configMap:
            name: python-app
            items:
              - key: main
                path: main.py
